--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <section id="certificates">
             <h2>Certificates</h2>
             <ul id="certificate-list">
-                <li><a href="#" onclick="openCertificate('cert1.pdf')">Certificate 1</a></li>
-                <li><a href="#" onclick="openCertificate('cert2.pdf')">Certificate 2</a></li>
-                <li><a href="#" onclick="openCertificate('cert3.pdf')">Certificate 3</a></li>
+                <li><a href="#" onclick="openCertificate('Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
+                <li><a href="#" onclick="openCertificate('cert2.pdf')">Prograqmming Zertifikate</a></li>
+                <li><a href="#" onclick="openCertificate('cert3.pdf')">Simulation Zertifikate</a></li>
             </ul>
         </section>
     </main>
