--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mein Portfolio. Alle Rechte vorbehalten.</p>
+        <p>&copy; 2024 Alaa Diab Portfolio. Alle Rechte vorbehalten.</p>
     </footer>
 
     <script src="script.js"></script>
