--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mein Portfolio</title>
+    <title>Alaa Diab Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+
+    <body>
     <div id="content">
         <header>
             <h1>Willkommen in meinem Portfolio</h1>
@@ -26,16 +27,16 @@
             <section id="recommendations">
                 <h2>Empfehlungen</h2>
                 <ul id="recommendation-list">
-                    <li><a href="#" onmouseover="previewCertificate('rec1.pdf')" onmouseout="clearPreview()">Empfehlungsschreiben 1</a></li>
-                    <li><a href="#" onmouseover="previewCertificate('rec2.pdf')" onmouseout="clearPreview()">Empfehlungsschreiben 2</a></li>
+                    <li><a href="#" onmouseover="previewCertificate('rec1.pdf')">Empfehlungsschreiben 1</a></li>
+                    <li><a href="#" onmouseover="previewCertificate('rec2.pdf')">Empfehlungsschreiben 2</a></li>
                 </ul>
             </section>
 
             <section id="publications">
                 <h2>Publikationen und Forschungen</h2>
                 <ul id="publication-list">
-                    <li><a href="#" onmouseover="previewCertificate('pub1.pdf')" onmouseout="clearPreview()">Publikation 1</a></li>
-                    <li><a href="#" onmouseover="previewCertificate('pub2.pdf')" onmouseout="clearPreview()">Publikation 2</a></li>
+                    <li><a href="#" onmouseover="previewCertificate('pub1.pdf')">Publikation 1</a></li>
+                    <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
                 </ul>
             </section>
         </main>
@@ -46,12 +47,6 @@
     <footer>
         <p>&copy; 2024 Mein Portfolio. Alle Rechte vorbehalten.</p>
     </footer>
-
-
-
-    
-    
-
 
     <script src="script.js"></script>
 </body>
