--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section id="certificates">
                 <h2>Zertifikate</h2>
                 <ul id="certificate-list">
-                    <li><a href="#" onclick="openCertificate('Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
+                    <li><a href="https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf" onclick="openCertificate('Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
                     <li><a href="#" onclick="openCertificate('cert2.pdf')">Prograqmming Zertifikate</a></li>
                     <li><a href="#" onclick="openCertificate('cert3.pdf')">Simulation Zertifikate</a></li>
                 </ul>
