--- a/index.html
+++ b/index.html
@@ -3,51 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alaa Diab Portfolio</title>
+    <title>Mein Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
 
+    <div class="container">
+        <div class="content">
+            <header>
+                <h1>Willkommen in meinem Portfolio</h1>
+                <p>Hier finden Sie meine Zertifikate und weitere Bewerbungsunterlagen.</p>
+            </header>
+            <main>
+                <section id="certificates">
+                    <h2>Zertifikate</h2>
+                    <ul id="certificate-list">
+                        <li><a href="#" onmouseover="previewCertificate('cert1.pdf')">Zertifikat 1</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('cert2.pdf')">Zertifikat 2</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('cert3.pdf')">Zertifikat 3</a></li>
+                    </ul>
+                </section>
 
-    <body>
-    <div id="content">
-        <header>
-            <h1>Willkommen in meinem Portfolio</h1>
-            <p>Hier finden Sie meine Zertifikate und weitere Bewerbungsunterlagen.</p>
-        </header>
-        <main>
-            <section id="certificates">
-                <h2>Zertifikate</h2>
-                <ul id="certificate-list">
-                    <li><a href="https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf" onclick="openCertificate('Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
-                    <li><a href="#" onclick="openCertificate('cert2.pdf')">Prograqmming Zertifikate</a></li>
-                    <li><a href="#" onclick="openCertificate('cert3.pdf')">Simulation Zertifikate</a></li>
-                </ul>
-            </section>
+                <section id="recommendations">
+                    <h2>Empfehlungen</h2>
+                    <ul id="recommendation-list">
+                        <li><a href="#" onmouseover="previewCertificate('rec1.pdf')">Empfehlungsschreiben 1</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('rec2.pdf')">Empfehlungsschreiben 2</a></li>
+                    </ul>
+                </section>
 
-            <section id="recommendations">
-                <h2>Empfehlungen</h2>
-                <ul id="recommendation-list">
-                    <li><a href="#" onmouseover="previewCertificate('rec1.pdf')">Empfehlungsschreiben 1</a></li>
-                    <li><a href="#" onmouseover="previewCertificate('rec2.pdf')">Empfehlungsschreiben 2</a></li>
-                </ul>
-            </section>
-
-            <section id="publications">
-                <h2>Publikationen und Forschungen</h2>
-                <ul id="publication-list">
-                    <li><a href="#" onmouseover="previewCertificate('pub1.pdf')">Publikation 1</a></li>
-                    <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
-                </ul>
-            </section>
-        </main>
+                <section id="publications">
+                    <h2>Publikationen und Forschungen</h2>
+                    <ul id="publication-list">
+                        <li><a href="#" onmouseover="previewCertificate('pub1.pdf')">Publikation 1</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
+                    </ul>
+                </section>
+            </main>
+        </div>
+        <div class="preview">
+            <iframe id="pdfPreview" src=""></iframe>
+        </div>
     </div>
-    <div id="preview">
-        <iframe id="pdfPreview" src=""></iframe>
-    </div>
+
     <footer>
         <p>&copy; 2024 Mein Portfolio. Alle Rechte vorbehalten.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.1.1/pdf.min.js"></script> 
+    <script>
+        function previewCertificate(fileName) {
+            const iframe = document.getElementById('pdfPreview');
+            // Use PDF.js for interactive viewing (replace with your PDF.js integration)
+            iframe.src = `viewer.html?file=certificates/${fileName}`; 
+        }
+    </script>
+
 </body>
 </html>
