--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <section id="certificates">
                     <h2>Zertifikate</h2>
                     <ul id="certificate-list">
-                        <li><a href="#" onmouseover="previewCertificate('cert1.pdf')">Zertifikat 1</a></li>
-                        <li><a href="#" onmouseover="previewCertificate('cert2.pdf')">Zertifikat 2</a></li>
-                        <li><a href="#" onmouseover="previewCertificate('cert3.pdf')">Zertifikat 3</a></li>
+                        <li><a href="https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf" onmouseover="previewCertificate('Zeugnisse_Alaa_Diab.pdf')" onclick="openCertificate('Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('cert2.pdf')">Prograqmming Zertifikate</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('cert3.pdf')">Simulation Zertifikate</a></li>
                     </ul>
                 </section>
 
