--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.1.1/pdf.min.js"></script> 
-
+    <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
+    <script>
+        function previewCertificate(fileName) {
+            const iframe = document.getElementById('pdfPreview');
+            // Use PDF.js for interactive viewing (replace with your PDF.js integration)
+            iframe.src = `viewer.html?file=certificates/${fileName}`; 
+        }
+    </script>
 
 </body>
 </html>
