--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
         <p>&copy; 2024 Mein Portfolio. Alle Rechte vorbehalten.</p>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.1.1/pdf.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.9.155/pdf.min.mjs"></script> 
     <script src="//mozilla.github.io/pdf.js/build/pdf.mjs" type="module"></script>
+
     <script>
         function previewCertificate(fileName) {
             const iframe = document.getElementById('pdfPreview');
