--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <section id="certificates">
                     <h2>Zertifikate</h2>
                     <ul id="certificate-list">
-                        <li><a href="#" onclick="loadPdf('certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
+                        <li><a href="https://github.com/AlaaDiab7/Bewerbungsunterlagen/blob/main/certificates/Zeugnisse_Alaa_Diab.pdf" onclick="loadPdf('certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
                         <li><a href="#" onclick="loadPdf('certificates/cert2.pdf')">Programmierung Zertifikate</a></li>
                         <li><a href="#" onclick="loadPdf('certificates/cert3.pdf')">Simulation Zertifikate</a></li>
                     </ul>
