--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
             canvas = document.getElementById('pdf-canvas'),
             ctx = canvas.getContext('2d');
 
+        document.querySelectorAll('a').forEach(link => {
+        link.addEventListener('mouseover', () => {
+            link.style.color = '#ff5722';
+        });
+        link.addEventListener('mouseout', () => {
+            link.style.color = '';
+        });
+        });
+
+        
         function renderPage(num) {
             pageRendering = true;
             pdfDoc.getPage(num).then(function(page) {
