--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <section id="certificates">
                     <h2>Zertifikate</h2>
                     <ul id="certificate-list">
-                        <li><a href="#" onclick="loadPdf('certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
+                        <li><a href="#" onclick="loadPdf('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf')">Uni Zeugnisse</a></li>
                         <li><a href="#" onclick="loadPdf('certificates/Programming_Certificate.pdf')">Programmier-Zertifikate</a></li>
                         <li><a href="#" onclick="loadPdf('certificates/cert3.pdf')">Simulation Zertifikate</a></li>
                     </ul>
