--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
             <canvas id="pdf-canvas"></canvas>
             <div class="controls">
                 <button onclick="prevPage()">Zurück</button>
-                <span id="page-info">Seite <span id="page-num"></span> von <span id="page-count"></span></span>
+                <span id="page-info">Seite 1 von 10</span>
                 <button onclick="nextPage()">Weiter</button>
+                <button onclick="zoomIn()">Zoom In</button>
+                <button onclick="zoomOut()">Zoom Out</button>
             </div>
         </div>
+        
     </div>
 
 <script type="module">
