--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@ canvas.addEventListener("click", () => {
     window.loadPdf = loadPdf;
     window.prevPage = prevPage;
     window.nextPage = nextPage;
+    window.zoomIn = zoomIn;
+    window.zoomOut = zoomOut;
 </script>
     
 </body>
