--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mein Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        /*
         .container {
             display: flex;
             height: 100vh;
@@ -51,7 +52,7 @@
 
         .controls button:hover {
             background: #005bb5;
-        }
+        }  */
 
         #page-info {
             margin: 0 10px;
@@ -112,11 +113,11 @@
 
     pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
-    let pdfDoc = null;
-    let pageNum = 1;
-    let scale = 1.5; // Default zoom scale
-    const canvas = document.getElementById("pdf-canvas");
-    const ctx = canvas.getContext("2d");
+let pdfDoc = null;
+let pageNum = 1;
+let scale = 1.5; // Default zoom scale
+const canvas = document.getElementById("pdf-canvas");
+const ctx = canvas.getContext("2d");
     
     /*let pdfDoc = null,
         pageNum = 1,
@@ -127,7 +128,9 @@
         ctx = canvas.getContext('2d');
      */
     
-  // Load and render the PDF
+
+
+// Load and render the PDF
 async function loadPdf(url) {
     const pdf = await pdfjsLib.getDocument(url).promise;
     pdfDoc = pdf;
@@ -167,15 +170,15 @@ function nextPage() {
 
 // Zoom in by increasing scale
 function zoomIn() {
-    scale += 0.25;
-    renderPage(pageNum);
+    scale += 0.25; // Increase the scale factor
+    renderPage(pageNum); // Re-render the current page
 }
 
 // Zoom out by decreasing scale
 function zoomOut() {
     if (scale > 0.5) {
-        scale -= 0.25;
-        renderPage(pageNum);
+        scale -= 0.25; // Decrease the scale factor
+        renderPage(pageNum); // Re-render the current page
     }
 }
 
@@ -185,6 +188,7 @@ canvas.addEventListener("click", () => {
     scale = scale === 1.5 ? 2.5 : 1.5;
     renderPage(pageNum);
 });
+
 
     // Expose functions globally
     window.loadPdf = loadPdf;
