--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- Left-side: Certificate List -->
         <div class="content">
             <header>
                 <h1>Willkommen in meinem Portfolio</h1>
@@ -43,6 +44,7 @@
                 
             </main>
         </div>
+        <!-- Right-side: PDF Viewer -->
         <div class="preview">
             <canvas id="pdf-canvas"></canvas>
             <div class="controls">
