--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@ let pageNum = 1;
 let scale = 1.5; // Default zoom scale
 const canvas = document.getElementById("pdf-canvas");
 const ctx = canvas.getContext("2d");
+const canvasWrapper = document.getElementById("canvas-wrapper");
+
+let isDragging = false; // Track drag state
+let startX, startY; // Track mouse starting position
+let translateX = 0, translateY = 0; // Track canvas position
 
 // Load and render the PDF
 async function loadPdf(url) {
@@ -83,6 +88,8 @@ async function loadPdf(url) {
 async function renderPage(num) {
     const page = await pdfDoc.getPage(num);
     const viewport = page.getViewport({ scale });
+
+    // Resize the canvas to match the viewport
     canvas.width = viewport.width;
     canvas.height = viewport.height;
 
@@ -91,6 +98,11 @@ async function renderPage(num) {
         viewport: viewport
     };
     await page.render(renderContext).promise;
+
+    // Center the canvas in the container
+    translateX = 0;
+    translateY = 0;
+    updateCanvasTransform();
 
     // Update page info
     document.getElementById("page-info").textContent = `Seite ${pageNum} von ${pdfDoc.numPages}`;
@@ -110,19 +122,53 @@ function nextPage() {
     renderPage(pageNum);
 }
 
-// Zoom in by increasing scale
+// Zoom in by increasing the scale
 function zoomIn() {
     scale += 0.25; // Increase the scale factor
     renderPage(pageNum); // Re-render the current page
 }
 
-// Zoom out by decreasing scale
+// Zoom out by decreasing the scale
 function zoomOut() {
     if (scale > 0.5) {
         scale -= 0.25; // Decrease the scale factor
         renderPage(pageNum); // Re-render the current page
     }
 }
+
+// Update the canvas transform for zoom and drag
+function updateCanvasTransform() {
+    canvas.style.transform = `translate(${translateX}px, ${translateY}px) scale(${scale})`;
+}
+
+// Handle drag start
+canvasWrapper.addEventListener("mousedown", (e) => {
+    isDragging = true;
+    startX = e.clientX - translateX;
+    startY = e.clientY - translateY;
+    canvasWrapper.style.cursor = "grabbing";
+});
+
+// Handle drag move
+canvasWrapper.addEventListener("mousemove", (e) => {
+    if (isDragging) {
+        translateX = e.clientX - startX;
+        translateY = e.clientY - startY;
+        updateCanvasTransform();
+    }
+});
+
+// Handle drag end
+canvasWrapper.addEventListener("mouseup", () => {
+    isDragging = false;
+    canvasWrapper.style.cursor = "grab";
+});
+
+// Prevent drag state from persisting if the mouse leaves the wrapper
+canvasWrapper.addEventListener("mouseleave", () => {
+    isDragging = false;
+    canvasWrapper.style.cursor = "grab";
+});
 
     // Expose functions globally
     window.loadPdf = loadPdf;
