--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ canvasWrapper.addEventListener("mouseleave", () => {
     window.nextPage = nextPage;
     window.zoomIn = zoomIn;
     window.zoomOut = zoomOut;
+    window.saveFullPDF = saveFullPDF;
 </script>
     
 </body>
