--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ function selectCertificate(url) {
 }
 
     // Expose functions globally
-    window.loadPdf = loadPdf;
+    // window.loadPdf = loadPdf;
     window.prevPage = prevPage;
     window.nextPage = nextPage;
     window.zoomIn = zoomIn;
