--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@ function selectCertificate(url) {
     window.zoomIn = zoomIn;
     window.zoomOut = zoomOut;
     window.saveFullPDF = saveFullPDF;
+    window.selectCertificate = selectCertificate;
+     
 </script>
     
 </body>
