--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <script type="module">
     import * as pdfjsLib from './build/pdf.mjs';
-const pdfjsLib = window["./build/pdf"];
+// const pdfjsLib = window["./build/pdf"];
     pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
 let pdfDoc = null;
