--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     </div>
 
 <script type="module">
-   // import * as pdfjsLib from './build/pdf.mjs';
+    import * as pdfjsLib from './build/pdf.mjs';
  const pdfjsLib = window["./build/pdf"];
-    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
+  //  pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
 let pdfDoc = null;
 let pdfData = null; // Global variable to store the raw PDF data
