--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 <script type="module">
     import * as pdfjsLib from './build/pdf.mjs';
- const pdfjsLib = window["./build/pdf"];
-  //  pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
+// const pdfjsLib = window["./build/pdf"];
+    pdfjsLib.GlobalWorkerOptions.workerSrc = './build/pdf.worker.mjs';
 
 let pdfDoc = null;
 let pdfData = null; // Global variable to store the raw PDF data
