--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
                         <li><a href="#" onclick="selectCertificate('https://alaadiab7.github.io/Bewerbungsunterlagen/certificates/Zeugnisse_Alaa_Diab.pdf')">Simulation Zertifikate</a></li>
                     </ul>
                 </section>
+
+                <section id="recommendations">
+                    <h2>Empfehlungen</h2>
+                    <ul id="recommendation-list">
+                        <li><a href="#" onmouseover="previewCertificate('rec1.pdf')">Empfehlungsschreiben 1</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('rec2.pdf')">Empfehlungsschreiben 2</a></li>
+                    </ul>
+                </section>
+
+                <section id="publications">
+                    <h2>Publikationen und Forschungen</h2>
+                    <ul id="publication-list">
+                        <li><a href="#" onmouseover="previewCertificate('pub1.pdf')">Publikation 1</a></li>
+                        <li><a href="#" onmouseover="previewCertificate('pub2.pdf')">Publikation 2</a></li>
+                    </ul>
+                </section>
+                
             </main>
         </div>
         <!-- Right-side: PDF Viewer -->
